# c-ares

./: .gitignore  CMakeLists.txt  CMakePresetsBase.json  ares_build.in  ares_config.in  c-ares-config.cmake.in  configure.cmake
docs/: CMakeLists.txt
include/: CMakeLists.txt
src/lib/: CMakeLists.txt
